@@ -13,6 +13,7 @@
 - updated: `U.getExtension()` returns lower-case extensions
 
 - fixed: (IMPORTANT) long messages in WebSocket
+- fixed: (IMPORTANT) `controller` param in schemas
 - fixed: moved executing of `MailMessage.callback()` to better place
 - fixed: mail auth when `options.user` and `options.password` are blank
 - fixed: JS/CSS/HTML blocks
